[package]
name = "tera_abstaction_for_actixweb"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
description = "Makes creating a Tera instance and rendering a template in Actix-Web easier"
readme = "README.md"
repository = "https://github.com/GlitchyCrafting/tera_abstraction_for_actixweb.git"
categories = ["web-programming"]
keywords = ["web", "actix-web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0"
tera = "1"
